--- a/planes.html
+++ b/planes.html
@@ -140,10 +140,12 @@
             </div>
 
             <div class="footer-social">
-                <a href="#" aria-label="WhatsApp"><i class="ri-whatsapp-fill"></i></a>
-                <a href="#" aria-label="Facebook"><i class="ri-facebook-fill"></i></a>
-                <a href="#" aria-label="Instagram"><i class="ri-instagram-fill"></i></a>
-                <a href="#" aria-label="LinkedIn"><i class="ri-linkedin-fill"></i></a>
+                <a href="https://wa.me/5217341271314" target="_blank" aria-label="WhatsApp"><i
+                        class="ri-whatsapp-fill"></i></a>
+                <a href="https://www.instagram.com/aaesystems.mx/" target="_blank" aria-label="Instagram"><i
+                        class="ri-instagram-fill"></i></a>
+                <a href="https://www.linkedin.com/in/aae-systems-1484563b2/" target="_blank" aria-label="LinkedIn"><i
+                        class="ri-linkedin-fill"></i></a>
             </div>
 
             <p class="copyright">© 2026 AAE Systems. Todos los derechos reservados.</p>
