--- a/beneficios.html
+++ b/beneficios.html
@@ -161,7 +161,7 @@
                 <h3>¿Listo para recuperar tu vida?</h3>
                 <p>La tecnología está lista. Solo faltas tú.</p>
                 <div style="margin-top: 2rem;">
-                    <a href="contacto.html" class="btn-primary"
+                    <a href="https://cal.com/aaesystems-ew7rwz" class="btn-primary"
                         style="text-decoration: none; display: inline-block;">Agendar Consultoría Gratuita</a>
                     <a href="planes.html" class="btn-secondary"
                         style="text-decoration: none; display: inline-block; margin-left: 1rem;">Ver Precios</a>
@@ -208,3 +208,4 @@
 </body>
 
 </html>
+
