Update and rename index.html to inicio.html

--- a/inicio.html
+++ b/inicio.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AAE Systems - Automatización Inteligente</title>
+    <title>AAE Systems | Growth Automation para Empresas</title>
     <meta name="description"
-        content="AAE Systems - Agencia especializada en automatización de procesos, integración de sistemas y soluciones de IA para tu negocio.">
+        content="AAE Systems es una agencia de Growth Automation que diseña infraestructura digital para captar, convertir y escalar ventas de forma automatizada.">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,40 +59,44 @@
             <div class="hero-card container">
                 <div class="hero-bg"></div>
                 <div class="hero-content">
-                    <span class="badge">AUTOMATIZACIÓN B2B</span>
-                    <h1 class="hero-title">Transforma tu Negocio con<br>Inteligencia Artificial</h1>
+                    <span class="badge">GROWTH AUTOMATION B2B</span>
+                    <h1 class="hero-title">
+                        Convierte más leads en ventas<br>
+                        con sistemas automatizados 24/7
+                    </h1>
                     <div class="divider"></div>
-                    <p class="hero-subtitle">Optimizamos procesos, reducimos costos y escalamos tus operaciones con
-                        soluciones de automatización a medida.</p>
+                    <p class="hero-subtitle">
+                        Diseñamos e implementamos infraestructura digital que capta, nutre y convierte clientes
+                        automáticamente, reduciendo procesos manuales y aumentando la eficiencia comercial.
+                    </p>
                     <div class="hero-actions">
-                        <a href="planes.html" class="btn-primary"
+                        <a href="contacto.html" class="btn-primary"
                             style="text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">
-                            Comenzar Ahora
+                            Agendar Diagnóstico Estratégico
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <path d="M5 12h14M12 5l7 7-7 7" />
                             </svg>
                         </a>
                         <a href="beneficios.html" class="btn-secondary"
-                            style="text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">Ver
-                            Casos de Uso</a>
+                            style="text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">
+                            Ver Cómo Funciona
+                        </a>
                     </div>
                 </div>
             </div>
         </section>
 
-        </section>
-
-        <!-- ABOUT TEASER (Instagram Post Style) -->
+        <!-- ABOUT TEASER -->
         <section class="about-teaser-section container">
             <a href="about.html" class="teaser-card">
                 <div class="teaser-image">
                     <span class="teaser-icon">❖</span>
                 </div>
                 <div class="teaser-content">
-                    <span class="teaser-label">Nuestra Misión</span>
-                    <h3>Ingeniería Invisible</h3>
-                    <div class="teaser-link-text">Leer más →</div>
+                    <span class="teaser-label">Nuestra Metodología</span>
+                    <h3>Infraestructura de Crecimiento</h3>
+                    <div class="teaser-link-text">Descubrir enfoque estratégico →</div>
                 </div>
             </a>
         </section>
@@ -100,68 +104,80 @@
         <!-- SERVICES SECTION -->
         <section id="services" class="services-section container">
             <div class="section-header">
-                <h2>Nuestras Soluciones</h2>
-                <a href="planes.html" class="link-view-all">Ver todos los servicios →</a>
+                <h2>Sistemas de Crecimiento</h2>
+                <a href="planes.html" class="link-view-all">Ver estructura completa →</a>
             </div>
             <div class="services-grid">
+
                 <div class="service-card">
                     <div class="card-overlay"></div>
-                    <div class="card-icon">🤖</div>
-                    <h3 class="card-title">Chatbots IA</h3>
-                    <p class="card-description">Asistentes virtuales 24/7 que califican leads, agendan citas y resuelven
-                        dudas automáticamente.</p>
+                    <div class="card-icon">📈</div>
+                    <h3 class="card-title">Sistema de Captación Inteligente</h3>
+                    <p class="card-description">
+                        Landing pages, formularios y WhatsApp conectados que captan y califican prospectos automáticamente.
+                    </p>
                 </div>
+
                 <div class="service-card">
                     <div class="card-overlay"></div>
-                    <div class="card-icon">⚡</div>
-                    <h3 class="card-title">Automatización de Flujos</h3>
-                    <p class="card-description">Conectamos tus apps (CRM, Email, Slack) para eliminar tareas repetitivas
-                        y errores humanos.</p>
+                    <div class="card-icon">🔁</div>
+                    <h3 class="card-title">Sistema de Conversión Automatizada</h3>
+                    <p class="card-description">
+                        Seguimiento automático, agendamiento y enlaces de pago que convierten leads en citas y ventas.
+                    </p>
                 </div>
+
                 <div class="service-card">
                     <div class="card-overlay"></div>
                     <div class="card-icon">📊</div>
-                    <h3 class="card-title">Análisis de Datos</h3>
-                    <p class="card-description">Dashboards inteligentes que convierten datos brutos en decisiones
-                        estratégicas para tu empresa.</p>
+                    <h3 class="card-title">Sistema de Métricas y Optimización</h3>
+                    <p class="card-description">
+                        Dashboards ejecutivos con métricas reales de crecimiento, conversión y retorno de inversión.
+                    </p>
                 </div>
+
             </div>
         </section>
-
-        <!-- PLANS & POLICIES REMOVED (Moved to separate pages) -->
 
         <!-- STATS SECTION -->
         <section id="stats" class="stats-section">
             <div class="stats-content container">
-                <h3>Resultados Comprobados</h3>
-                <p>Nuestros clientes han transformado sus operaciones con AAE Systems.</p>
+                <h3>Resultados Medibles</h3>
+                <p>Empresas que implementan nuestros sistemas experimentan mejoras reales en conversión y eficiencia operativa.</p>
                 <div class="stats-grid">
+
                     <div class="stat-item">
-                        <div class="stat-label">Reducción en tiempo de procesos</div>
+                        <div class="stat-number">+30%</div>
+                        <div class="stat-label">Incremento promedio en conversión de leads</div>
                     </div>
+
                     <div class="stat-item">
-                        <div class="stat-number">$250K+</div>
-                        <div class="stat-label">Ahorros anuales promedio</div>
+                        <div class="stat-number">-40%</div>
+                        <div class="stat-label">Reducción en tareas operativas manuales</div>
                     </div>
+
                     <div class="stat-item">
-                        <div class="stat-number">50+</div>
-                        <div class="stat-label">Clientes satisfechos</div>
+                        <div class="stat-number">ROI Positivo</div>
+                        <div class="stat-label">En los primeros 90 días de implementación</div>
                     </div>
+
                 </div>
             </div>
         </section>
 
-        <!-- Contacto -->
+        <!-- CONTACT -->
         <section id="contacto" class="contact-section">
             <div class="contact-content">
-                <h3>¿Listo para automatizar tu negocio?</h3>
-                <p>Agenda una consulta gratuita y descubre cómo podemos optimizar tus procesos</p>
+                <h3>¿Listo para escalar tu sistema de ventas?</h3>
+                <p>
+                    Agenda un diagnóstico estratégico y descubre dónde estás perdiendo oportunidades de crecimiento.
+                </p>
                 <form class="contact-form" id="contactForm">
                     <input type="text" id="name" placeholder="Nombre completo" required>
                     <input type="email" id="email" placeholder="Correo electrónico" required>
                     <input type="tel" id="phone" placeholder="Teléfono (opcional)">
-                    <textarea id="message" placeholder="Cuéntanos sobre tu proyecto" rows="4" required></textarea>
-                    <button type="submit" id="submitBtn">Enviar Consulta</button>
+                    <textarea id="message" placeholder="Cuéntanos sobre tu negocio y objetivos" rows="4" required></textarea>
+                    <button type="submit" id="submitBtn">Solicitar Diagnóstico</button>
                 </form>
             </div>
         </section>
@@ -178,7 +194,10 @@
                     <div class="logo-decoration"><span>❖</span></div>
                 </a>
             </div>
-            <p class="footer-slogan">AUTOMATIZACIÓN INTELIGENTE PARA TU NEGOCIO</p>
+
+            <p class="footer-slogan">
+                INFRAESTRUCTURA DE CRECIMIENTO PARA EMPRESAS QUE QUIEREN ESCALAR
+            </p>
 
             <div class="footer-links">
                 <a href="index.html">Página Principal</a>
