--- a/index.html
+++ b/index.html
@@ -73,12 +73,94 @@
                         <a href="contacto.html" class="btn-primary"
                             style="text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">
                             Agendar Diagnóstico Estratégico
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path d="M5 12h14M12 5l7 7-7 7" />
+                            </svg>
                         </a>
                         <a href="beneficios.html" class="btn-secondary"
                             style="text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">
                             Ver Cómo Funciona
                         </a>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ABOUT TEASER -->
+        <section class="about-teaser-section container">
+            <a href="about.html" class="teaser-card">
+                <div class="teaser-image">
+                    <span class="teaser-icon">❖</span>
+                </div>
+                <div class="teaser-content">
+                    <span class="teaser-label">Nuestra Metodología</span>
+                    <h3>Infraestructura de Crecimiento</h3>
+                    <div class="teaser-link-text">Descubrir enfoque estratégico →</div>
+                </div>
+            </a>
+        </section>
+
+        <!-- SERVICES SECTION -->
+        <section id="services" class="services-section container">
+            <div class="section-header">
+                <h2>Sistemas de Crecimiento</h2>
+                <a href="planes.html" class="link-view-all">Ver estructura completa →</a>
+            </div>
+            <div class="services-grid">
+
+                <div class="service-card">
+                    <div class="card-overlay"></div>
+                    <div class="card-icon">📈</div>
+                    <h3 class="card-title">Sistema de Captación Inteligente</h3>
+                    <p class="card-description">
+                        Landing pages, formularios y WhatsApp conectados que captan y califican prospectos automáticamente.
+                    </p>
+                </div>
+
+                <div class="service-card">
+                    <div class="card-overlay"></div>
+                    <div class="card-icon">🔁</div>
+                    <h3 class="card-title">Sistema de Conversión Automatizada</h3>
+                    <p class="card-description">
+                        Seguimiento automático, agendamiento y enlaces de pago que convierten leads en citas y ventas.
+                    </p>
+                </div>
+
+                <div class="service-card">
+                    <div class="card-overlay"></div>
+                    <div class="card-icon">📊</div>
+                    <h3 class="card-title">Sistema de Métricas y Optimización</h3>
+                    <p class="card-description">
+                        Dashboards ejecutivos con métricas reales de crecimiento, conversión y retorno de inversión.
+                    </p>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- STATS SECTION -->
+        <section id="stats" class="stats-section">
+            <div class="stats-content container">
+                <h3>Resultados Medibles</h3>
+                <p>Empresas que implementan nuestros sistemas experimentan mejoras reales en conversión y eficiencia operativa.</p>
+                <div class="stats-grid">
+
+                    <div class="stat-item">
+                        <div class="stat-number">+30%</div>
+                        <div class="stat-label">Incremento promedio en conversión de leads</div>
+                    </div>
+
+                    <div class="stat-item">
+                        <div class="stat-number">-40%</div>
+                        <div class="stat-label">Reducción en tareas operativas manuales</div>
+                    </div>
+
+                    <div class="stat-item">
+                        <div class="stat-number">ROI Positivo</div>
+                        <div class="stat-label">En los primeros 90 días de implementación</div>
+                    </div>
+
                 </div>
             </div>
         </section>
