--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 </button>
                 <nav class="dropdown-menu" id="dropdownMenu">
                     <a href="index.html" class="menu-link">Inicio</a>
-                    <a href="about.html" class="menu-link">Acerca de</a>
+                    <a href="about.html" class="menu-link">Quienes somos</a>
                     <a href="planes.html" class="menu-link">Planes</a>
-                    <a href="beneficios.html" class="menu-link">Beneficios</a>
+                    <a href="beneficios.html" class="menu-link">Soluciones</a>
                     <a href="politicas.html" class="menu-link">Políticas</a>
-                    <a href="contacto.html" class="menu-link">Contacto</a>
+                    <a href="contacto.html" class="menu-link">Contactanos</a>
                 </nav>
             </div>
         </div>
@@ -201,11 +201,11 @@
 
             <div class="footer-links">
                 <a href="index.html">Inicio</a>
-                <a href="about.html">Acerca de</a>
+                <a href="about.html">Quienes somos</a>
                 <a href="planes.html">Planes</a>
-                <a href="beneficios.html">Beneficios</a>
+                <a href="beneficios.html">Soluciones</a>
                 <a href="politicas.html">Políticas</a>
-                <a href="contacto.html">Contacto</a>
+                <a href="contacto.html">Contactanos</a>
             </div>
 
             <div class="footer-social">
