--- a/planes.html
+++ b/planes.html
@@ -41,12 +41,12 @@
                     <span></span>
                 </button>
                 <nav class="dropdown-menu" id="dropdownMenu">
-                    <a href="index.html" class="menu-link">Página Principal</a>
-                    <a href="about.html" class="menu-link">Acerca de</a>
+                    <a href="index.html" class="menu-link">Inicio</a>
+                    <a href="about.html" class="menu-link">Quiénes somos</a>
                     <a href="planes.html" class="menu-link">Planes</a>
-                    <a href="beneficios.html" class="menu-link">Beneficios</a>
+                    <a href="beneficios.html" class="menu-link">Soluciones</a>
                     <a href="politicas.html" class="menu-link">Políticas</a>
-                    <a href="contacto.html" class="menu-link">Contacto</a>
+                    <a href="contacto.html" class="menu-link">contáctanos</a>
                 </nav>
             </div>
         </div>
@@ -131,12 +131,12 @@
             <p class="footer-slogan">AUTOMATIZACIÓN INTELIGENTE PARA TU NEGOCIO</p>
 
             <div class="footer-links">
-                <a href="index.html">Página Principal</a>
-                <a href="about.html">Acerca de</a>
+                <a href="index.html">Inicio</a>
+                <a href="about.html">Quienes somos</a>
                 <a href="planes.html">Planes</a>
-                <a href="beneficios.html">Beneficios</a>
+                <a href="beneficios.html">Soluciones</a>
                 <a href="politicas.html">Políticas</a>
-                <a href="contacto.html">Contacto</a>
+                <a href="contacto.html">Contáctanos</a>
             </div>
 
             <div class="footer-social">
@@ -156,3 +156,4 @@
 </body>
 
 </html>
+
